tests/fail/div_by_zero.avm
push int8(125)
push int32(0)
div
exit
